added html sections and some styling to header and footer

--- a/index.html
+++ b/index.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DeeAnn Stelzl Portfolio</title>
+    <link rel="stylesheet" href="./assets/style.css"/>
 </head>
 <body>
+    <header>
+            <section>
+                <img src="./assets/images/DeeAnnHeadshot.jpeg" alt="headshot">
+                 <h1>DEEANN STELZL</h1>
+            </section>
+             <nav>
+            About Me
+            Work
+            Contact 
+            Resume
+            </nav>
+    </header>
+
+    <main>
+    <!--About Me-->
+            <section>
+                <h2>About Me </h2>
+                    <p>After raising three kids- DeeAnn Stelzl found herself immersed inside the world of digital marketing - first as a project manager and then as a developer of landing pages and email campaigns designed to attract new clients and monetize website visitors. Her unique background sets the stage for a web developer who can visualize the end goal and final project long before she writes her first line of code.</p>
+                   <br>
+                    <p>DeeAnn's technical skills include front end web development tools such as HTML/CSS, Javascript/jQuery, Responsive Design, React.js and others. She has worked on API Design, Databases such as MySQL and MongoDB and is familiar with deployment and delivery tools like Git, Shell Scripting, Github and Unit Testing. </p>
+                </section>
+<!--Work-->
+            <section>
+                <h2>Work </h2>
+                <img src="placeholder" alt="Project One Image"/>
+                <img src="placeholder" alt="Project Two Image"/>
+                <img src="placeholder" alt="Project Three Image"/>
+            </section>
+<!--Contact-->
+            <section>
+                <h2> Contact & Resume</h2>   
+            </section>
+    </main>
+  
+    <footer>
+       <p><a id="LinkedIn" href="https://www.linkedin.com/in/deeann-stelzl-4402b9127/">LinkedIn</a></p>
+        Github
+          
+    </footer>
     
 </body>
 </html>
@@ -16,17 +56,16 @@
 
 
 
-
-GIVEN I need to sample a potential employee's previous work
-WHEN I load their portfolio
-THEN I am presented with the developer's name, a recent photo or avatar, and links to sections about them, their work, and how to contact them
-WHEN I click one of the links in the navigation
-THEN the UI scrolls to the corresponding section
-WHEN I click on the link to the section about their work
-THEN the UI scrolls to a section with titled images of the developer's applications
-WHEN I am presented with the developer's first application
-THEN that application's image should be larger in size than the others
-WHEN I click on the images of the applications
-THEN I am taken to that deployed application
-WHEN I resize the page or view the site on various screens and devices
-THEN I am presented with a responsive layout that adapts to my viewport
+<!--GIVEN I need to sample a potential employee's previous work
+    WHEN I load their portfolio
+    THEN I am presented with the developer's name, a recent photo or avatar, and links to sections about them, their work, and how to contact them
+    WHEN I click one of the links in the navigation
+    THEN the UI scrolls to the corresponding section
+    WHEN I click on the link to the section about their work
+    THEN the UI scrolls to a section with titled images of the developer's applications
+    WHEN I am presented with the developer's first application
+    THEN that application's image should be larger in size than the others
+    WHEN I click on the images of the applications
+    THEN I am taken to that deployed application
+    WHEN I resize the page or view the site on various screens and devices
+    THEN I am presented with a responsive layout that adapts to my viewport
