added project placeholder files and inserted relative path into html

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <!--Work-->
             <section>
                 <h2 id="work">Work </h2>
-                <img src="placeholder" alt="Project One Image"/>
-                <img src="placeholder" alt="Project Two Image"/>
-                <img src="placeholder" alt="Project Three Image"/>
+                <img src="./assets/images/Project 1 Placeholder Image.png" alt="Project One Image"/>
+                <img src="./assets/images/Project 2 Placeholder Image.png" alt="Project Two Image"/>
+                <img src="./assets/images/Project 3 Placeholder Image.png" alt="Project Three Image"/>
             </section>
 <!--Contact-->
             <section>
