resized project images to reflect sample template, moved bottom links from footeer to contact section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
             <section>
-                <img src="./assets/images/DeeAnnHeadshot.jpeg" alt="headshot">
+                <img id="headshot"  src="./assets/images/DeeAnnHeadshot.jpeg" alt="headshot">
                  <h1>DEEANN STELZL</h1>
             </section>
              <nav>
@@ -22,24 +22,29 @@
     </header>
 
     <main>
-        <div><img id="spaceholder" src="./assets/images/coming soon (Banner (Landscape)).png" alt="spaceholder"></div>
     <!--About Me-->
             <section>
                 <h2 id="about-me">About Me </h2>
                     <p>After raising three kids- DeeAnn Stelzl found herself immersed inside the world of digital marketing - first as a project manager and then as a developer of landing pages and email campaigns designed to attract new clients and monetize website visitors. Her unique background sets the stage for a web developer who can visualize the end goal and final project long before she writes her first line of code.</p>
-                   <br>
+   
                     <p>DeeAnn's technical skills include front end web development tools such as HTML/CSS, Javascript/jQuery, Responsive Design, React.js and others. She has worked on API Design, Databases such as MySQL and MongoDB and is familiar with deployment and delivery tools like Git, Shell Scripting, Github and Unit Testing. </p>
+                    <br>
                 </section>
 <!--Work-->
             <section>
                 <h2 id="work">Work </h2>
-                <img src="./assets/images/Project 1 Placeholder Image.png" alt="Project One Image"/>
-                <img src="./assets/images/Project 2 Placeholder Image.png" alt="Project Two Image"/>
-                <img src="./assets/images/Project 3 Placeholder Image.png" alt="Project Three Image"/>
+                <img id="proj1" src="./assets/images/Project 1 Placeholder Image.png" alt="Project One Image"/>
+                <img id="proj2" src="./assets/images/Project 2 Placeholder Image.png" alt="Project Two Image"/>
+                <img id="proj3" src="./assets/images/Project 3 Placeholder Image.png" alt="Project Three Image"/>
             </section>
 <!--Contact-->
             <section>
-                <h2 id="contact"> Contact & Resume</h2>   
+                <h2 id="contact"> Contact & Resume</h2>  
+                <p> 
+                    <a href="https://www.linkedin.com/in/deeann-stelzl-4402b9127/">LinkedIn</a>
+                    <a href="https://www.github.com/dstelzl">Github</a>
+                    <a href="https://docs.google.com/document/d/1OfH66thtsTQDmNh6xtVn_dNVC9nk5H16B4BQmJSZrGc/edit?usp=sharing">DeeAnn's Resume</a>
+                </p> 
             </section>
     </main>
   
