--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeeAnn Stelzl Portfolio</title>
-    <link rel="stylesheet" href="./assets/style.css"/>
+    <link rel="stylesheet" href="./assets/css/reset.css"/>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
 <body>
     <header>
-            <section>
+            <section class="header">
                 <img id="headshot"  src="./assets/images/DeeAnnHeadshot.jpeg" alt="headshot">
                  <h1>DEEANN STELZL</h1>
             </section>
