indented paragraph and images

--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
 <!--Work-->
            <section>
                 <h2 id="work">Work </h2>
+            <div class="images">
                 <img id="proj1" src="./assets/images/Project 1 Placeholder Image.png" alt="Project One Image"/>
                 <img id="proj2" src="./assets/images/Project 2 Placeholder Image.png" alt="Project Two Image"/>
                 <img id="proj3" src="./assets/images/Project 3 Placeholder Image.png" alt="Project Three Image"/>
+            </div>
             </section>
 <!--Contact-->
             <section>
@@ -68,6 +70,7 @@
             <a id="links" href="https://docs.google.com/document/d/1OfH66thtsTQDmNh6xtVn_dNVC9nk5H16B4BQmJSZrGc/edit?usp=sharing">DeeAnn's Resume</a>
         </p> -->
         <ul>
+            <li>&copy deeannstelzl.com</li>
             <li>
                 <a id="links" href="#about-me">About Me</a>
             </li>
