added resized images

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
            <section>
                 <h2 id="work">Work </h2>
             <div class="images">
-                <img id="proj1" src="./assets/images/Project 1 Placeholder Image.png" alt="Project One Image"/>
-                <img id="proj2" src="./assets/images/Project 2 Placeholder Image.png" alt="Project Two Image"/>
-                <img id="proj3" src="./assets/images/Project 3 Placeholder Image.png" alt="Project Three Image"/>
+                <img id="proj1" src="./assets/images/PROJECT 1.png" alt="Project One Image"/>
+                <img id="proj2" src="./assets/images/Project2.png" alt="Project Two Image"/>
+                <img id="proj3" src="./assets/images/Project3.png" alt="Project Three Image"/>
             </div>
             </section>
 <!--Contact-->
