added Horiseon Project as project one- changed image and linked url

--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
                     <p>DeeAnn's technical skills include front end web development tools such as HTML/CSS, Javascript/jQuery, Responsive Design, React.js and others. She has worked on API Design, Databases such as MySQL and MongoDB and is familiar with deployment and delivery tools like Git, Shell Scripting, Github and Unit Testing. </p>
                   
                 </section>
-<!--Work: Resized images to create requested layout and linked to placeholder URL created in google docs. Changed tags to simplify structure-->
+<!--Work: Resized images to create requested layout and linked to Horiseon Project and placeholder URL created in google docs. 
+    Changed tags to simplify structure-->
            <section>
                 <h2 id="work">Work </h2>
             <div>
                 <article> 
-                    <a href="https://docs.google.com/document/d/1BqbAvw28n-85w6aQSYThBDCl3L02DOObJnZ9DMHSR28/edit?usp=sharing">
+                    <a href="https://github.com/dstelzl/horiseon-refactor-project">
                     <img id="proj1" src="./assets/images/PROJECT 1.png" alt="Project One Image"/></a>
             </article>
         </div> 
