setup new target for all URLs and added padding for mobile view

--- a/index.html
+++ b/index.html
@@ -33,37 +33,37 @@
                   
                 </section>
 <!--Work: Resized images to create requested layout and linked to Horiseon Project and placeholder URL created in google docs. 
-    Changed tags to simplify structure-->
+    Changed tags to simplify structure, changed target for links-->
            <section>
                 <h2 id="work">Work </h2>
             <div>
                 <article> 
-                    <a href="https://github.com/dstelzl/horiseon-refactor-project">
+                    <a href="https://github.com/dstelzl/horiseon-refactor-project" target="_blank">
                     <img id="proj1" src="./assets/images/PROJECT 1.png" alt="Project One Image"/></a>
             </article>
         </div> 
         <div id="secondary-work">
-            <article id="proj2"> <a href="https://docs.google.com/document/d/1BqbAvw28n-85w6aQSYThBDCl3L02DOObJnZ9DMHSR28/edit?usp=sharing">
+            <article id="proj2"> <a href="https://docs.google.com/document/d/1BqbAvw28n-85w6aQSYThBDCl3L02DOObJnZ9DMHSR28/edit?usp=sharing" target="_blank">
                     <img src="./assets/images/Project2.png" alt="Project Two Image"/></a>
             </article> 
         
-            <article id="proj3">   <a href="https://docs.google.com/document/d/1BqbAvw28n-85w6aQSYThBDCl3L02DOObJnZ9DMHSR28/edit?usp=sharing">
+            <article id="proj3">   <a href="https://docs.google.com/document/d/1BqbAvw28n-85w6aQSYThBDCl3L02DOObJnZ9DMHSR28/edit?usp=sharing" target="_blank">
                     <img src="./assets/images/Project3.png" alt="Project Three Image"/></a>
             </article> 
         </div>
             </section>
-<!--Contact-->
+<!--Contact: changed target for links-->
             <section id="contact">
                 <h2 > Contact</h2>  
                 <section>
                 <div > 
-                    <a href="https://www.linkedin.com/in/deeann-stelzl-4402b9127/">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/deeann-stelzl-4402b9127/"target="_blank">LinkedIn</a>
                 </div>  
                 <div>
-                    <a href="https://www.github.com/dstelzl">Github</a>
+                    <a href="https://www.github.com/dstelzl" target="_blank">Github</a>
                 </div>
                 <div>
-                    <a href="mailto: placeholder@bootcamp.com">
+                    <a href="mailto: placeholder@bootcamp.com" target="_blank">
                         placeholder@bootcamp.com
                     </a>
                 </div>
@@ -81,16 +81,4 @@
 
 
 
-<!--GIVEN I need to sample a potential employee's previous work
-WHEN I load their portfolio
-THEN I am presented with the developer's name, a recent photo or avatar, and links to sections about them, their work, and how to contact them
-WHEN I click one of the links in the navigation
-THEN the UI scrolls to the corresponding section
-WHEN I click on the link to the section about their work
-THEN the UI scrolls to a section with titled images of the developer's applications
-WHEN I am presented with the developer's first application
-THEN that application's image should be larger in size than the others
-WHEN I click on the images of the applications
-THEN I am taken to that deployed application
-WHEN I resize the page or view the site on various screens and devices
-THEN I am presented with a responsive layout that adapts to my viewport
+
